# gossip

./: .clang-format  .clang-tidy  .clangd  .git-blame-ignore-revs  .git-blame-ignore-revs.license  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CMakePresets.json  Makefile  README.md  conanfile.py  execute.cu  executor.cuh  simulate.cu
benchmark/: README.md  benchmark_all2all.py  benchmark_plan.py  plot_results.py
benchmark/plots/: p100_quad_scatter.pdf.license
examples/: CMakeLists.txt  execute.cu  executor.cuh  simulate.cu
include/gossip/: all_to_all.cuh  all_to_all_async.cuh  all_to_all_plan.hpp  broadcast.cuh  broadcast_plan.hpp  common.cuh  config.h  context.cuh  error_checking.hpp  gather.cuh  gather_plan.hpp  gossip.cuh  memory_manager.cuh  multisplit.cuh  point_to_point.cuh  scatter.cuh  scatter_plan.hpp  transfer_plan.hpp  utils.cuh
plan_parser/: CMakeLists.txt  plan_parser.cpp
plans/: CMakeLists.txt  plan_parser.cpp  plan_parser.hpp
plans/include/gossip/: plan_parser.hpp
scripts/: plan_from_rings.py  plan_from_topology_asynch.py  plan_from_topology_synch.py  topology_parser.py
